fixing some minor hyperlink and text wrap issues.

--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ body {
 	position: absolute;
 	font-family: Karla, Arial, sans-serif;
 	color: #323232;
-	line-height: 1.6em; /*or 25px*/
+	line-height: 1.7em; /*or 25px*/
 	font-size: 11.5pt;
 /*    letter-spacing: 0.6px;*/
 	margin: 0;
